[metadata]
name = rts-protototype
version = 0.0.1
author = SC van Nostrand
author_email = scvannost@gmail.com
description = A prototype of a Real-time Strategy game in Python for Flask
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/scvannost/rts-prototype
project_urls =
    Bug Tracker = https://github.com/scvannost/rts-prototype/issues
classifiers =
    Programming Language :: Python :: 3.9
    LICENSE :: OSI APPROVED :: GNU GENERAL PUBLIC LICENSE V3 (GPLV3)

[options]
packages =
    rts_lib
python_requires = >=3.9
